front-bugfix Headers elements was displaying behind some other elements

--- a/front/src/components/Header/UserForm/style-desktop.scss
+++ b/front/src/components/Header/UserForm/style-desktop.scss
@@ -20,7 +20,6 @@
     display: flex;
     flex-flow: column nowrap;
     margin-right: 1rem;
-    z-index: 99 !important;
   }
 
   .menu__login-panel {
