--- a/front/src/components/Home/HomeCard/style-desktop.scss
+++ b/front/src/components/Home/HomeCard/style-desktop.scss
@@ -7,6 +7,8 @@
     border: 2px solid black;
     border-radius: 1rem;
     overflow: hidden;
+    position: relative;
+    z-index: 1;
   }
 
   .home-fiction__informations {
